@@ -46,3 +46,4 @@ Viper233: patch monitor edid
 Alexandre Bossot: oracle module
 Javier Barroso: VLAN interface on AIX
 Yves GUIMARD: download.pm patch for zip files
+Marco Tizzoni: Host_Resources_Mib.pm and Agent.pm patches
